--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -667,28 +667,8 @@ a {
     text-align: center;
   }
 }
-.content .faq .img {
-  width: 100%;
-  height: 85%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-@media (max-width: 768px) {
-  .content .faq .img {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 40px;
-  }
-}
-.content .faq .img img {
-  width: 300px;
-  height: 300px;
-  -o-object-fit: contain;
-     object-fit: contain;
-  -o-object-position: center;
-     object-position: center;
+.content .faq img {
+  max-width: 100%;
 }
 .content .contact-us {
   padding: 60px 0;
